# bob

./: .dockerignore  .env.example  .firebaserc  .gh-issue-created.tsv  .gitattributes  .gitignore  .gitmodules  .mailmap  .merge-test  ACTIVITY_STREAM_IMPLEMENTATION.md  AGENTIC_AI_GUIDE.md  AGENTIC_AI_PRODUCTION_READY_SUMMARY.md  AGENTIC_AI_TESTING_GUIDE.md  AGENTIC_AI_TEST_CREDENTIALS.json  AGENTS.md  AGENT_DEVELOPMENT_GUIDE.md  AGENT_EXECUTION_RUNBOOK.md  AI_DEPLOYMENT_GUIDE.md  AI_INTEGRATION_STRATEGY.md  AI_PLANNER_DOCUMENTATION.md  AI_TEST_VALIDATION_FIXES_v3.5.0.md  APP_OVERVIEW.md  AUTHENTICATION_PERMISSION_FIXES_v3.0.8.md  AUTOMATED_TEST_PLAN.md  BOB – Consolidated Priority Requirements & Schema Deltas (v3.0.7 Handoff).md  BOB – Consolidated Priority Requirements & Schema Deltas (v3.0.8 Handoff).md  BOB_AI_COMPREHENSIVE_TEST_SCRIPT.md  BOB_AI_COMPREHENSIVE_TEST_SCRIPT_v3.5.0.md  BOB_AI_COMPREHENSIVE_TEST_SCRIPT_v3.5.2.md  BOB_AI_SECURE_AUTHENTICATION_TEST_GUIDE_v3.5.5.md  BOB_AI_TEST_SUITE_COMPREHENSIVE_v3.5.2.md  BOB_Audit_Report.md  BOB_COMPREHENSIVE_TEST_SCRIPT.md  BOB_DATABASE_SCHEMA_COMPLETE.md  BOB_Deep_Audit_Report.md  BOB_Final_System_Audit.md  BOB_GOAL_CRUD_TESTING_SCRIPT_v3.4.md  BOB_Goals_Test_Report_20250902_101905.md  BOB_Issue_20_Goal_Visualization_Fixes_IMPLEMENTATION.md  BOB_SPRINT_ENHANCEMENT_COMPLETE.md  (+318 more)
.claude/: launch.json
.firebase/: hosting.cHVibGlj.cache  hosting.cmVhY3QtYXBwL2J1aWxk.cache
.gh-issue-bodies/: _create.tsv  ai_planner_nightly_automation.md  ai_reminder_triage_pipeline.md  budget_engine_projections.md  clipboard_to_tasks.md  daily_chores_routines.md  daily_priority_summary.md  email_delivery_config_ui.md  finance_bulk_apply_merchant_mapping.md  finance_dashboards.md  finance_savings_plan_panel.md  finance_settings_privacy.md  firestore_listener_crash_tasks_view.md  goal_cost_model.md  mfp_integration_macros.md  monzo_oauth_pipeline.md  reminders_native_app_integration.md  reminders_sync.md  roadmap_budget_signals.md  story_table_permission_denied.md  theme_blocks_auto_scheduler.md  theme_calendar_blocks_v1.md  travel_map.md
.gh-issue-comments/: 158.md  215.md  218.md  219.md  220.md  226.md  227.md  228.md
.gh-new-issues/: ai-functions-consistency-cleanup.md  audio-goal-chat.md  auto-assign-orchestrated-work-to-sprint.md  chat-summarization-guardrails.md  epic-ai-orchestration-chat.md  epic-finance-ai-classification-chat.md  exports.md  fab-goal-intake-chat.md  finance-chat-assistant.md  goal-roadmap-horizontal-scroll.md  healthkit.md  monzo-llm-auto-categorisation.md  planner-approvals-center.md  planner-preview-warnings-ui.md  research-docs-viewer.md  runna.md  secrets-and-flags-guide.md  story-orchestration.md  strava.md
.git-hooks/: post-merge-build
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.plans/: openai-api-server.md  streaming-support.md
Business Analyst AI/: BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  GAP_ANALYSIS.md  GETTING_STARTED.md  README.md  REVIEW-NOTES.md  STATUS.md  September 1st .ini  defects.md  deployment.md  design.md  epics-stories.md  gemini.md  master requirenrnts sept 1st 2025.md  n8n-agentic-orchestration.md  requirements-traceability-matrix.md  schema.md  tests.md  ui-mockups.md
Developer AI/: GETTING_STARTED.md  README.md
acp_adapter/: __init__.py  __main__.py  auth.py  entry.py  events.py  permissions.py  server.py  session.py  tools.py
acp_registry/: agent.json
agent/: __init__.py  anthropic_adapter.py  auxiliary_client.py  bedrock_adapter.py  builtin_memory_provider.py  context_compressor.py  context_engine.py  context_references.py  copilot_acp_client.py  credential_pool.py  display.py  embeddings.py  error_classifier.py  gemini_cloudcode_adapter.py  google_code_assist.py  google_oauth.py  insights.py  manual_compression_feedback.py  memory_manager.py  memory_provider.py  model_metadata.py  models_dev.py  nous_rate_guard.py  prompt_builder.py  prompt_caching.py  rate_limit_tracker.py  redact.py  retry_utils.py  skill_commands.py  skill_utils.py  smart_model_routing.py  subdirectory_hints.py  title_generator.py  trajectory.py  usage_pricing.py
archive/: ARCHIVE_INDEX.md  comprehensive-deploy.sh
build-logs/: manifest.json
cron/: __init__.py  jobs.py  scheduler.py  sync_task_queue.py
datagen-config-examples/: example_browser_tasks.jsonl  run_browser_tasks.sh  trajectory_compression.yaml  web_research.yaml
deployment-logs/: DEPLOYMENT_SUCCESS_v3.5.0_20250901-160705.md  DEPLOYMENT_SUCCESS_v3.5.0_20250902-102324.md  DEPLOYMENT_SUCCESS_v3.5.0_20250902-110311.md  DEPLOYMENT_SUCCESS_v3.5.0_20250902-112112.md  DEPLOYMENT_SUCCESS_v3.5.1_$(date +%Y%m%d-%H%M%S).md  DEPLOYMENT_SUCCESS_v3.5.1_20250901-180225.md  DEPLOYMENT_SUCCESS_v3.5.5_20250902-113006.md  DEPLOYMENT_SUCCESS_v3.5.5_20250902-114304.md  preview-trigger-20250911-175823.md
docker/: SOUL.md  entrypoint.sh
docs/: AI_Planning_Scheduling_Review_20251019.md  AI_SCHEDULING_ENRICHMENT_HANDOFF.md  CAPACITY_PLANNING_SUMMARY.md  DEDUPE_AND_TK_REFS.md  FIREBASE_OPTIMISATION_CHECKLIST.md  FIREBASE_OPTIMISATION_COMPLETE_SUMMARY.md  HYBRID_ARCHITECTURE_IMPLEMENTATION.md  README.md  RECAPTCHA_ENV_CONFIG.md  RECAPTCHA_IMPLEMENTATION_CHECKLIST.md  RECAPTCHA_QUICK_START.md  RECAPTCHA_SECURITY_SETUP.md  ROADMAP_GAPS.md  acp-setup.md  agent-handover-2026-03-20.md  ai-delegation-v2-api.md  ai-scheduling.md  calendar-block-engine-review-20250910.md  capacity_planning_deployment.md  capacity_planning_implementation.md  capacity_planning_requirements.md  capacity_planning_walkthrough.md  cloud-function-migration-audit.md  dashboard-deep-links.md  deployed_functions_20251019.json  honcho-integration-spec.html  honcho-integration-spec.md  langfuse-tracing-local-setup.md  mcp.md  merchant-pattern-schema.md  messaging.md  monzo-budget-review-20250912.md  monzo-integration-audit-20250910.md  scheduler-logic.md  send_file_integration_map.md  (+4 more)
optional-skills/mlops/models/neutts/assets/neutts-cli/: README.md  pyproject.toml
optional-skills/mlops/models/neutts/assets/neutts-cli/src/neutts_cli/: audio.py  cli.py  config.py  core.py
(+2389 files in other folders)
