[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neutts-cli"
version = "0.1.0"
description = "Standalone CLI for installing and running NeuTTS locally"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hermes Agent Contributors"}
]
dependencies = []

[project.scripts]
neutts = "neutts_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
